added css style

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="about-me">About Me</a>
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    <a href="work">Work</a>
+                    <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="contact-me">Contact Me</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="resume">Resume</a>
+                    <a href="#resume">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -35,7 +35,8 @@
     <!-- hero section -->
     <section class="hero">
         <div class="hero-cta">
-            <h2>Deep Dive</h2>
+            <h3>WELCOME:</h3>
+            <h2>To Web Development</h2>
             <img src="./assets/Images/placeholder.jpeg" alt="profile picture" />
         </div>
 
@@ -63,7 +64,12 @@
             <h2 class="section-title secondary-border">Work</h2>
         </div>
         <div class="box-text">
-            <p></p>
+            <div style="position: relative;">
+            <iframe src="https://mikeatwood.github.io/run-buddy/" style="overflow: hidden;" scrolling="no"
+           ></iframe>
+        </div>
+        <div class="box-text">
+            <iframe src="https://mikeatwood.github.io/Horiseon-Search-Engine/" style="overflow: hidden;" scrolling="no" ></iframe>
         </div>
     </section>
 
@@ -81,6 +87,23 @@
             
         </div>
     </section>
+
+    <!-- Resume -->
+    <section id="resume" class="boxes">
+        <div class="flex-row">
+            <h2 class="section-title secondary-border">Resume</h2>
+        </div>
+        <div class="box-text">
+            <p></p>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+        <h2>
+            Thank you very much for your consideration!
+        </h2>
+    </footer>
 
 </body>
 
