fixed small media querry

--- a/index.html
+++ b/index.html
@@ -57,34 +57,34 @@
         </div>
     </section>
 
-    
-        <!-- Work -->
+
+    <!-- Work -->
     <section id="work" class="boxes">
         <div class="flex-row">
             <h2 class="section-title secondary-border">Work</h2>
         </div>
         <div class="box-text">
             <div style="position: relative;">
-            <iframe src="https://mikeatwood.github.io/run-buddy/" style="overflow: hidden;" scrolling="no"
-           ></iframe>
-        </div>
-        <div class="box-text">
-            <iframe src="https://mikeatwood.github.io/Horiseon-Search-Engine/" style="overflow: hidden;" scrolling="no" ></iframe>
-        </div>
+                <iframe src="https://mikeatwood.github.io/run-buddy/" style="overflow: hidden;" scrolling="no"></iframe>
+            </div>
+            <div class="box-text">
+                <iframe src="https://mikeatwood.github.io/Horiseon-Search-Engine/" style="overflow: hidden;"
+                    scrolling="no"></iframe>
+            </div>
     </section>
 
-        <!-- Contact -->
+    <!-- Contact -->
     <section id="contact-me" class="contact">
         <h2 class="section-title secondary-border">Contact Me</h2>
         <div class="contact-info">
             <address>
                 55 Main Street <br />
-                    Some Town, Ca <br />
-                    12345<br />
-                    P: 952.240.5637 (952.240.5637)<br />
-                    E. <a href="atwood169@yahoo.com">atwood169@yahoo.com</a>
+                Some Town, Ca <br />
+                12345<br />
+                P: 952.240.5637 (952.240.5637)<br />
+                E. <a href="atwood169@yahoo.com">atwood169@yahoo.com</a>
             </address>
-            
+
         </div>
     </section>
 
@@ -94,14 +94,19 @@
             <h2 class="section-title secondary-border">Resume</h2>
         </div>
         <div class="box-text">
-            <p></p>
+            <p>seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird
+                on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag
+                trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights
+                retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray
+                gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage
+                letterpress High Life.</p>
         </div>
     </section>
 
     <!-- footer -->
     <footer>
         <h2>
-            Thank you very much for your consideration!
+            Thank you For Looking!
         </h2>
     </footer>
 
