added take a hike

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
             <div class="box-text">
                 <iframe src="https://mcamy2001.github.io/Get-Facts-and-Find-Cats/" style="overflow: hidden;" scrolling="no"></iframe>
             </div>
+
+            <div class="box-text">
+                <iframe src="https://takea-hike.herokuapp.com/" style="overflow: hidden;" scrolling="no"></iframe>
+            </div>
     </section>
 
     <!-- Contact -->
